# eubrazilcc-uc3-elastic-engine

./: Makefile.am  NOTICE.md  README.md  bootstrap  configure.ac
etc/: engine.cfg
src/: Makefile.am  agent_commands.c  agent_commands.h  agent_common.c  agent_common.h  agent_db.c  agent_db.h  agent_error.h  agent_folder.c  agent_folder.h  agent_json.c  agent_json.h  agent_query.h  agent_queue.c  agent_queue.h  agent_routines.c  agent_routines.h  agent_thread.c  agent_thread.h  debug.c  debug.h  engine.c
src/oph_json/: oph_json_common.c  oph_json_common.h  oph_json_graph.c  oph_json_graph.h  oph_json_grid.c  oph_json_grid.h  oph_json_library.h  oph_json_multigrid.c  oph_json_multigrid.h  oph_json_text.c  oph_json_text.h  oph_json_tree.c  oph_json_tree.h
